--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 body, button, .form-control, .form-select{
-  color: #6F6F6F !important;
-  font-size: 14px!important;
+  color: #1f1f1f !important;
+}
+body {
+  margin-bottom:50px;
 }
 .top{
   margin-top: 20px;
@@ -15,8 +17,8 @@ header {
   cursor: pointer;
 }
 .btn-primary {
-  background-color: #ffc107!important;
-  border-color: #ffc107!important;
-  color: black!important;
+  background-color: #FBB040!important;
+  border-color: #FBB040!important;
+  color: white!important;
 }
 
