--- a/src/components/transfers/recipient-list.scss
+++ b/src/components/transfers/recipient-list.scss
@@ -1,21 +1,5 @@
 .list-container{
-    background: #163e3b;
+    background: #01403c;
     color: #fff;
     text-align: center;
-    
 }
-
-.recipient-table, .list-container{
-    width: 500px;
-}
-
-.btn-container {
-    display: flex;
-    align-items: end;
-    justify-content: end;
-    padding-top: 44px;
-  }
-
-  .container {
-    margin-top: 0px !important;
-} 
