--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,21 @@ body, button, .form-control, .form-select{
 body {
   margin-bottom:50px!important;
 }
+@import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700|Open+Sans:400,300,600);
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "open sans", helvetica, arial, sans;
+  background: url(http://farm8.staticflickr.com/7064/6858179818_5d652f531c_h.jpg)
+    no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 .top{
   margin-top: 20px;
 }
@@ -20,5 +35,18 @@ header {
   background-color: #FBB040!important;
   border-color: #FBB040!important;
   color: white!important;
+}
+
+.styled-footer {
+  width: 100%;
+  display: "flex";
+  flex-direction: "row";
+  position: "fixed";
+  bottom: 0;
+  background-color: "#01403c";
+  color: "#fff";
+  padding: "10px 0";
+  align-items: 'center';
+  justify-content: "center";
 }
 
