--- a/src/components/accounts/account-list.scss
+++ b/src/components/accounts/account-list.scss
@@ -5,10 +5,21 @@
   width: 200px;
 }
 
+.title-name {
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+p .subtitle {
+  font-size: 1.3rem;
+  font-weight: 400;
+}
+
 .card {
   .card-header {
-    background-color: #01403c;
+    background-color: #013f3b;
     color: #fff;
+    font-weight: 600;
   }
 }
 
@@ -20,3 +31,4 @@
 .width100 {
   width: 100%;
 }
+
