--- a/src/components/login/login.scss
+++ b/src/components/login/login.scss
@@ -1,6 +1,36 @@
+@import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700|Open+Sans:400,300,600);
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Poppins", sans-serif !important;
+  color: #01403c !important;
+  background: url(http://farm8.staticflickr.com/7064/6858179818_5d652f531c_h.jpg)
+    no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 .log-form {
-  max-width: 400px;
-  padding: 1rem;
+  width: 40%;
+  min-width: 320px;
+  max-width: 475px;
+  background: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25);
+
   .logo {
     display: flex;
     align-items: center;
@@ -8,6 +38,65 @@
     padding: 20px;
     img {
       width: 50%;
+    }
+  }
+
+  form {
+    display: block;
+    width: 100%;
+    padding: 2em;
+  }
+
+  h2 {
+    width: 100%;
+    color: lighten(#01403c, 20%);
+    font-family: "Poppins", sans-serif !important;
+    color: #fff !important;
+    font-size: 0.8rem;
+    display: block;
+    background: #01403c;
+    width: 100%;
+    text-transform: uppercase;
+    padding: 0.75em 1em 0.75em 1.5em;
+    box-shadow: inset 0px 1px 1px fadeout(white, 95%);
+    border: 1px solid darken(#01403c, 5%);
+    /* //text-shadow: 0px 1px 1px darken(#01403c, 5%); */
+    margin: 0;
+    font-weight: 400;
+  }
+
+  input {
+    display: block;
+    margin: auto auto;
+    width: 100%;
+    margin-bottom: 2em;
+    padding: 0.5em 0;
+    border: none;
+    border-bottom: 1px solid #eaeaea;
+    padding-bottom: 1.25em;
+    color: #757575;
+    &:focus {
+      outline: none;
+    }
+  }
+
+  .btn {
+    display: inline-block;
+    background: #01403c;
+    border: 1px solid darken(#01403c, 5%);
+    padding: 0.5em 2em;
+    color: white;
+    margin-right: 0.5em;
+    box-shadow: inset 0px 1px 0px fadeout(white, 80%);
+    &:hover {
+      background: #01403c;
+    }
+    &:active {
+      background: #01403c;
+      box-shadow: inset 0px 1px 1px fadeout(black, 90%);
+    }
+    &:focus {
+      outline: none;
     }
   }
 }
