--- a/src/components/login/verification.scss
+++ b/src/components/login/verification.scss
@@ -3,6 +3,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  .title-text{
+    font-size: 1.5rem;
+    font-weight: 800;
+  }
 }
 
 .btn-container {
