--- a/src/components/transfers/add-recipient.scss
+++ b/src/components/transfers/add-recipient.scss
@@ -1,1 +1,23 @@
+.add-container{
+    .form-control,.form-select {
+        margin-bottom: 25px;
+        width: 602px;
+    }
+    .rd{
+        display: flex;
+        padding: 10px;
+    }
+    .btn{
+        display: flex;
+        justify-content: center;
+        button{
+            width: 150px;
+            text-align: center;
+        }
+    }
+    .form-container{
+        border-radius: 20px;
+    }
+
+}
 
