--- a/src/components/transfers/recipient-list.scss
+++ b/src/components/transfers/recipient-list.scss
@@ -1,8 +1,29 @@
 .list-container{
-    background: #01403c;
+    background: #163e3b;
     color: #fff;
     text-align: center;
+    
 }
+
+.recipient-table, .list-container{
+    width: 800px;
+}
+
+.subtitle{
+    padding: 10px;
+    line-height: 1.5rem;
+}
+
+.btn-container {
+    display: flex;
+    align-items: end;
+    justify-content: end;
+    padding-top: 44px;
+  }
+
+  .container {
+    margin-top: 0px !important;
+} 
 
 .list-container-table.table {
     margin: 0px!important;
