--- a/src/index.css
+++ b/src/index.css
@@ -20,4 +20,17 @@ body {
     font-size: 1.3rem;
     font-weight: 400;
   }
+
+  .footer {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    position: fixed;
+    bottom: 0;
+    background-color: #01403c;
+    color: #fff;
+    padding: 10px 0;
+    align-items: center;
+    justify-content: center;
+  }
 }
